all commands working

--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jest": "^21.15.1",
+    "uuid": "^3.2.1",
     "jest": "^22.4.3"
   },
   "dependencies": {
     "dotenv": "^5.0.1",
-    "winston": "^2.4.2"
+    "faker": "^4.1.0",
+    "winston": "^3.0.0-rc5"
   }
 }
